bin/Q2.jj
options 
{
  STATIC = false;         // generate non-static methods

  // set to true to debug token manager
  COMMON_TOKEN_ACTION = false;   

  // pass parser reference to the token manager
  TOKEN_MANAGER_USES_PARSER = true; 
}      
PARSER_BEGIN(Q2)
import java.io.*;
import java.util.*;
public class Q2 {
  public static void main(String[] args) throws Exception {
	Q2 parser = new Q2(new FileInputStream(args[0]));
	try {int val = parser.prog(); System.out.println(val);}
		catch(Exception e)
		{e.printStackTrace();}
		{System.out.println("no");}}
	}
//======================================================
class Q2SymTab
{
  private ArrayList<String> symbol;
  //-----------------------------------------
  public Q2SymTab()
  {
    symbol = new ArrayList<String>();
  }
  //-----------------------------------------
  public void enter(String s)
  {
    int index = symbol.indexOf(s);

    // if s is not in symbol, then add it
    if (index < 0)
      symbol.add(s);
  }
  //-----------------------------------------
  public String getSymbol(int i)
  {
    return symbol.get(i);
  }
  //-----------------------------------------
  public int getSize()
  {
    return symbol.size();
  }
}                                    // end of Q2SymTab
//======================================================
class Q2CodeGen
{
  private PrintWriter outFile;
  private Q2SymTab st;
  //-----------------------------------------
  public Q2CodeGen(PrintWriter outFile, Q2SymTab st)
  {
    this.outFile = outFile;
    this.st = st;
  }
  //-----------------------------------------
  public void emitInstruction(String op)
  {
    outFile.printf("          %-4s%n", op); 
  }
  //-----------------------------------------
  public void emitInstruction(String op, String opnd)
  {
    outFile.printf(
                  "          %-4s      %s%n", op, opnd); 
  }
  //-----------------------------------------
  public void emitdw(String label, String value)
  {
    outFile.printf(
             "%-9s dw        %s%n", label + ":", value);
  }
  //-----------------------------------------
  public void endCode()
  {
    outFile.println();
    emitInstruction("halt");

    int size = st.getSize();
    // emit dw for each symbol in the symbol table
    for (int i=0; i < size; i++) 
      emitdw(st.getSymbol(i), "0");
  }
}                             // end of Q2CodeGen class

PARSER_END(Q2)


// Specification of the Q2 token manager ==============

TOKEN_MGR_DECLS:
{
  // called for each token returned to parser

}
//------------------------------
SKIP:  // these tokens are not returned to parser
{
   " " 
 | 
   "\n" 
 | 
   "\r" 
 | 
   "\t"
 |
   <"//"(~["\n", "\r"])*>
}
//------------------------------
TOKEN:  // these tokens are returned to parser
{
     <THEN: "THEN">  // must precede <ID> 
 |
     <ELSE: "ELSE">  // must precede <ID> 
 |
     <FI: "FI">  // must precede <ID> 
 |
 <WHILE: "WHILE">  // must precede <ID> 
 |
    <DO: "DO">  // must precede <ID> 
 |
    <IF: "IF">  // must precede <ID>
 |
   <ASSIGN2: ":="> 
 |
   <PRINTLN: "println">  // must precede <ID> 
 |
   <PRINT: "print">
 |
   <UNSIGNED: (["0"-"9"])+> 
 |
   <ID: ["A"-"Z","a"-"z"] (["A"-"Z","a"-"z","0"-"9"])*>
 |
   <ASSIGN: "=">
 |
   <SEMICOLON: ";">
 |
   <LEFTPAREN: "(">
 |
   <RIGHTPAREN: ")">
 |
   <PLUS: "+">
 |
   <MINUS: "-">
 |
   <TIMES: "*">
 |
   <DIVIDE: "/">
 |
   <LEFTBRACE: "{">
 |
   <RIGHTBRACE: "}">
  
  |
   <ANDBIT: "&">
 |
   <ERROR: ~[]>  // matches any single character
}
/*S -> EXPR
EXPR -> EXPR EXPR OP
EXPR -> UNSIGNED
OP -> "+" | "-" | "*" | "/" */

// Translation grammar for S2j and S1 ==================

int prog():{int val;}
{
  val=S()
   <EOF>
   { return val;}
}

int S():{int val;}
{
  val = EXPR()
   { return val ;}
}

int EXPR(): { Token t1;String s2;int i1;int i2;} {
	t1=<UNSIGNED>
	{i1 = Integer.parseInt(t1.image);}
	(
	i2=EXPR() 
	s2=OP()
	{if(s2.equals("+")) return (i1+=i2);}
	{if(s2.equals("-")) return (i1-=i2);}
	{if(s2.equals("*")) return (i1*=i2);}
	{if(s2.equals("/")) return (i1=i1/i2);})*
  {return i1;}	
}

String OP(): { } {
  "+"
  {return "+";}
|
  "-"
  {return "-";}
|
  "*"
  {return "*";}
|
  "/"
  {return "/";}

}
